@@ -53,9 +53,6 @@ func (lcs *LeastCostSorter) SortSuppliers(prflID string, suppls []*Supplier,
 			sortedSuppls.SortedSuppliers = append(sortedSuppls.SortedSuppliers, srtSpl)
 		}
 	}
-	if len(sortedSuppls.SortedSuppliers) == 0 {
-		return nil, utils.ErrNotFound
-	}
 	sortedSuppls.SortLeastCost()
 	return
 }
